force-app/main/default/objects/Target__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suppliers Onboarded (month)</fullName>
            </value>
            <value>
                <fullName>Total Active Suppliers</fullName>
            </value>
            <value>
                <fullName>Purchasers Onboarded (month)</fullName>
            </value>
            <value>
                <fullName>Total Active Purchasers</fullName>
            </value>
            <value>
                <fullName>Supplier Buyer Maps Onboarded (month)</fullName>
            </value>
            <value>
                <fullName>Total Active Supplier Buyer Maps</fullName>
            </value>
            <value>
                <fullName>Total Invoice Value (month USD Equivalent)</fullName>
            </value>
            <value>
                <fullName>Number of Invoices (month)</fullName>
            </value>
            <value>
                <fullName>Funds Deposited (month USD Equivalent)</fullName>
            </value>
            <value>
                <fullName>Total Funds Available  (USD Equivalent)</fullName>
            </value>
            <value>
                <fullName>Total Funds on Platform  (USD Equivalent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>