force-app/main/default/objects/Target__c/fields/USD_Value__c.field-meta.xml
<CustomField>
    <fullName>USD_Value__c</fullName>
    <label>Request amount USD equivalent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>