force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Type__c</columns>
    <columns>count__c</columns>
    <columns>date__c</columns>
    <columns>USD_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>